# shape2fate

./: LICENSE  README.md  TROUBLESHOOTING.md  example.py  pyproject.toml
examples/: reconstruction_example.py  tracking_example.py  train_ccp_detector.py  train_exo_detector.py
model_zoo/: MODEL_ZOO.md  ccp-detector-sandy-feather-310.pt  ccp-detector-sandy-wildflower-269.pt  exo-detector-rural-wind-13.pt  exo-fusion-detector-giddy-yogurt-32.pt
shape2fate/: detection.py  linking.py  metrics.py  otf.py  parameter_estimation.py  parameters.py  reconstruction.py  synthetic_data.py  utils.py
src/: models.py  otf.py  sim.py
src/shape2fate/: detection.py  parameter_estimation.py  reconstruction.py  utils.py
