[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shape2fate"
version = "0.1.0"
description = "A Python library for tracking and analysis of plasma membrane processes in TIRF-SIM."
authors = [
    { name = "Adam Harmanec", email = "harmanec@utia.cas.cz" }
]

requires-python = ">=3.10"

dependencies = [
    "numpy==1.26.0",
    "opencv-python-headless==4.10.0.84",
    "opencv-contrib-python-headless==4.10.0.84",
    "scipy==1.12.0",
    "scikit-image==0.22.0",
    "pandas==2.2.1",
    "ortools==9.9.3963",
    "tqdm==4.65.0",
    "torch==1.13.1",
    "torchvision==0.14.1"
]