[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shape2fate"
version = "0.1.0"
description = "A Python library for tracking and analysis of plasma membrane processes in TIRF-SIM."
readme = "README.md"
authors = [
    { name = "Adam Harmanec", email = "harmanec@utia.cas.cz" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "opencv-python-headless==4.10.0.84",
    "scipy==1.12.0",
    "scikit-image==0.22.0",
    "pandas==2.2.1",
    "ortools==9.9.3963",
    "tqdm==4.65.0",
    "torch==1.13.1",
]

[project.optional-dependencies]
io = [
    "Pillow==10.4.0",
    "mrcfile==1.5.0",
    "nd2==0.9.0",
    "czifile==2019.7.2",
]
